tickets #25 i #35 done, some fixes in ubiquo core about filtered search and examples added.

--- a/guides/source/ubiquo_categories.textile
+++ b/guides/source/ubiquo_categories.textile
@@ -169,6 +169,22 @@ This helper is created dynamically for each categorization of the model and has 
 Model.<relation_name>(<list of categories>)
 </ruby>
 
+Moreover, we can use filtered_search and paginated_filtered_search (for further information
+read "filters section":ubiquo_core.html#filtered-search). To do that, we should write the macro 
+inside the model before filtering it. Once the macro is written, we can use filter functions wherever
+we need them.
+
+<ruby>
+class Book < ActiveRecord::Base
+  # ...
+  categorized_with :subject, :size => :many, :from => "subjects"
+  filtered_search_scopes :enable => [ :subject ]
+  # ...
+end
+
+Book.paginated_filtered_search({"filter_subject"=>"Algebra"})
+</ruby>
+
 h3. Categorize from views!
 
 The common case is that you need a selector for the form to choose options from
