Updates Ubiquo Config to Settings.

--- a/guides/source/getting_started.textile
+++ b/guides/source/getting_started.textile
@@ -61,7 +61,7 @@ h5. Ubiquo core
 
 This plugin contains the basic common Ubiquo structure so that other plugins can be built on top of it. This includes:
 
-* Ubiquo::Config system
+* Ubiquo::Settings system
 * Core helpers
 * Ubiquo layout and styling elements
 * Main ruby/rails extensions
