--- a/guides/source/ubiquo_core.textile
+++ b/guides/source/ubiquo_core.textile
@@ -3,7 +3,7 @@ h2. Ubiquo Core
 This plugin contains the basic common Ubiquo structure so that other
 plugins can be built on top of it. This includes:
 
-* Ubiquo::Config system
+* Ubiquo::Settings system
 * Core helpers
 * Ubiquo layout and styling elements
 * Main ruby/rails extensions
@@ -17,7 +17,7 @@ endprologue.
 
 h3. Using configuration
 
-Ubiquo::Config offers a place where store configuration variables
+Ubiquo::Settings offers a place where store configuration variables
 
 A value can have 2 states, added as default value and added as normal
 value. If both setted, normal value is used.
@@ -31,8 +31,8 @@ h4. Getting a value
 To get a stored value of the configuration.
 
 <ruby>
-value = Ubiquo::Config.get(:key)
-contexted_value = Ubiquo::Config.context(:context).get(:key)
+value = Ubiquo::Settings.get(:key)
+contexted_value = Ubiquo::Settings.context(:context).get(:key)
 </ruby>
 
 h4. Creating a new value
@@ -40,8 +40,8 @@ h4. Creating a new value
 You can create new values for the configuration.
 
 <ruby>
-Ubiquo::Config.add(:key, 'default_value')
-Ubiquo::Config.context(:context).add(:key, default_value)
+Ubiquo::Settings.add(:key, 'default_value')
+Ubiquo::Settings.context(:context).add(:key, default_value)
 </ruby>
 
 h4. Setting a normal value
@@ -50,8 +50,8 @@ when a key is added you can override their default value with _set_
 method:
 
 <ruby>
-Ubiquo::Config.set(:key, 'normal_value')
-Ubiquo::Config.context(:context).set(:key, normal_value)
+Ubiquo::Settings.set(:key, 'normal_value')
+Ubiquo::Settings.context(:context).set(:key, normal_value)
 </ruby>
 
 h4. Inherited values
@@ -63,8 +63,8 @@ Currently is used to the plugins lists max row number, default to 10
 but can be re-setted for a single list.
 
 <ruby>
-Ubiquo::Config.add_inheritance(:key, :existent_key)
-Ubiquo::Config.context(:context).add_inheritance(:key, :existent_key)
+Ubiquo::Settings.add_inheritance(:key, :existent_key)
+Ubiquo::Settings.context(:context).add_inheritance(:key, :existent_key)
 </ruby>
 
 h4. Use of config caller
